# avenue

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: asset.rs  builder.rs  ext.rs  fs.rs  lib.rs
src/compress/: brotli.rs  deflate.rs  gzip.rs  mod.rs  zstd.rs
src/minify/: css.rs  html.rs  js.rs  mod.rs
web/: Cargo.toml
web/src/: builder.rs  compress.rs  lib.rs  minify.rs
