[workspace]
members = ["web"]
resolver = "2"

[package]
name = "avenue"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "mime"]
std = []
mime = ["std", "dep:mime", "dep:mime_guess"]
either = ["dep:either"]

[dependencies]
either = { version = "1.13.0", optional = true }
mime = { version = "0.3.17", optional = true }
mime_guess = { version = "2.0.5", optional = true }
