[package]
name = "avenue-web"
version = "0.1.0"
edition = "2021"

[dependencies]
avenue = { version = "0.1.0", path = "../", features = [
  "std",
  "mime",
  "either",
] }
brotli = { version = "7.0.0", optional = true }
either = "1.13.0"
flate2 = { version = "1.0.35", optional = true }
lightningcss = { version = "1.0.0-alpha.63", optional = true }
mime = "0.3.17"
minify-html = { version = "0.15.0", optional = true }
minify-js = { version = "0.6.0", optional = true }
zstd = { version = "0.13.2", optional = true }

[features]
default = [
  "brotli",
  "zstd",
  "flate2",
  "lightningcss",
  "minify-js",
  "minify-html",
]
brotli = ["dep:brotli"]
zstd = ["dep:zstd"]
flate2 = ["dep:flate2"]
lightningcss = ["dep:lightningcss"]
minify-js = ["dep:minify-js"]
minify-html = ["dep:minify-html"]
